--- a/index.html
+++ b/index.html
@@ -1,1 +1,25 @@
-Hello World
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css" media="screen" title="no title">
+    <title>Tyga</title>
+  </head>
+  <body>
+    <div class="container">
+    <div id="nav">
+      <nav>
+          <ul>
+            <li><a href="#">Social Media</a></li>
+            <li><a href="#">#</a></li>
+            <li><a href="#">#</a></li>
+            <li><a href="#">Community</a></li>
+            <li><a href="#">Slack</a></li>
+            <li><a href="#">Links</a></li>
+          </ul>
+      </nav>
+    </div>
+
+  </body>
+</html>
